--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
       grid-template-columns: 1fr 1fr;
       gap: 8px;
     }
+    @media (min-width: 1000px) {
+      .grid {
+        grid-template-columns: 1fr 1fr 1fr;
+      }
+    }
     a img {
       width: 100%;
       display: block;
@@ -24,7 +29,7 @@
 <body>
 
   <div class="grid">
-    <a href="https://drive.google.com/file/d/1y4td86TXsZa309r521Hku3tWmFW6CVDQ/view?usp=drive_link">
+    <a href="https://drive.google.com/open?id=1faJCCzmburn-ajvtXsFfPnVdcIjbOiG5&usp=drive_copy">
       <img src="HeroBack.jpg" alt="" />
     </a>
     <a href="https://drive.google.com/uc?export=view&id=VIDEO_ID_2">
