--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <div class="grid">
     <a href="https://drive.google.com/open?id=1faJCCzmburn-ajvtXsFfPnVdcIjbOiG5&usp=drive_copy">
-      <img src="HeroBack.jpg" alt="" />
+      <img src="HeroBackS.jpg" alt="" />
     </a>
     <a href="https://drive.google.com/uc?export=view&id=VIDEO_ID_2">
       <img src="LighBlueBack.jpg" alt="" />
