--- a/index.html
+++ b/index.html
@@ -32,14 +32,17 @@
     <a href="https://drive.google.com/open?id=1faJCCzmburn-ajvtXsFfPnVdcIjbOiG5&usp=drive_copy">
       <img src="HeroBackS.jpg" alt="" />
     </a>
-    <a href="https://drive.google.com/uc?export=view&id=VIDEO_ID_2">
-      <img src="LighBlueBack.jpg" alt="" />
+    <a href="https://drive.google.com/open?id=1-Xmkpht0H3PFVxhbwccQv3bvieDNsH3Z&usp=drive_copy">
+      <img src="SupineStaff.jpg" alt="" />
     </a>
-    <a href="https://drive.google.com/uc?export=view&id=VIDEO_ID_3">
-      <img src="thumb3.jpg" alt="" />
+    <a href="https://drive.google.com/open?id=1LlAMzhQrfE_GU-fkLKZRwZTRVLH5f423&usp=drive_copy">
+      <img src="CowCobbler.jpg" alt="" />
     </a>
-    <a href="https://drive.google.com/uc?export=view&id=VIDEO_ID_4">
-      <img src="thumb4.jpg" alt="" />
+    <a href="https://drive.google.com/open?id=1pr1c58AEd1MA4uuXehp9ME8rwiH36dIN&usp=drive_copy">
+      <img src="FullBack.jpg" alt="" />
+    </a>
+    <a href="https://drive.google.com/open?id=1SyeB3pYJMEKuU3R0wcI0USGBySZ4M0Hh&usp=drive_copy">
+      <img src="HeroFeet.jpg" alt="" />
     </a>
   </div>
 
